--- a/CoreCoffee/Views/Test/index.cshtml
+++ b/CoreCoffee/Views/Test/index.cshtml
@@ -8,7 +8,7 @@
 <h1>Hello from Test Controller</h1>
 <h2>Your name is @Model.Name</h2>
 
-@if (Model.DateOfBirth.HasValue)
+@if (Model.DateOfBirth != null)
 {
     <h2> Your DoB is: @Model.DateOfBirth</h2>
 }
